# ld2410_ble_sensor

./: README.md  package.xml  setup.cfg  setup.py
ld2410_ble_sensor/: ld2410_ble.py
