<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ld2410_ble_sensor</name>
  <version>0.0.1</version>
  <description>LD2410 BLE Human presense sensor</description>
  <maintainer email="horton.rscott@gmail.com">elsabot</maintainer>
  <license>Apache License 2.0</license>
  
  <exec_depend>ld2410_sensor_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
